Fix for firefox overflow
[ci skip]

--- a/app/assets/stylesheets/layout/_work_package_table.sass
+++ b/app/assets/stylesheets/layout/_work_package_table.sass
@@ -74,6 +74,9 @@
   flex: 1 1 auto
   display: flex
 
+  // FIX for Firefox not correctly scrolling the inner containers
+  overflow: hidden
+
 // Left part of the split view
 // == Flex container for (table|timeline)
 .work-packages-split-view--left
